<resources>
    <string name="app_name">homeTaskAndroid_03_01</string>
    <string name="hello_there_welcome_back">Hello there, \nWelcome back</string>
    <string name="todo">TODO</string>
    <string name="sign_in_ti_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New user? Sign up</string>
</resources>